--- a/src/main.css
+++ b/src/main.css
@@ -3,27 +3,25 @@
 @tailwind utilities;
 
 * {
-    scrollbar-color: #0004;
+    scrollbar-color: theme(colors.primary.600 / 75%) theme(colors.primary.600 / 25%);
     scrollbar-width: thin;
 }
 
 *::-webkit-scrollbar {
-    background-color: transparent;
+    background-color: theme(colors.dark.700);
     height: 0.25rem;
     width: 0.25rem;
 }
 
 *::-webkit-scrollbar-track {
     background-clip: content-box;
-    background-color: #0004;
-    border-radius: 0.125rem;
+    background-color: theme(colors.primary.600 / 25%);
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #0005;
-    border-radius: 0.125rem;
+    background-color: theme(colors.primary.600 / 50%);
 }
 
 *:hover::-webkit-scrollbar-thumb {
-    background-color: #0008;
+    background-color: theme(colors.primary.600 / 75%);
 }
